# Mindfield

./: CMakeLists.txt
config/: Doxyfile.in  config.hpp.in
docs/: Doxyfile
docs/html/: dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  graph_legend.html  index.html
source/: main.cpp  main.cu
